Added Calorie Calculator, Welcome Screen, Recipes and screenshots

--- a/BMIcalculator/app/src/main/res/layout/activity_main.xml
+++ b/BMIcalculator/app/src/main/res/layout/activity_main.xml
@@ -1,84 +1,144 @@
 <?xml version="1.0" encoding="utf-8"?>
-<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/gridLayout2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:layout_marginTop="120dp"
-    android:columnCount="2"
-    android:padding="16dp"
+    android:layout_marginTop="40dp"
     android:useDefaultMargins="true"
     tools:context=".MainActivity">
 
-
     <TextView
-        android:id="@+id/weightLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/mass"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:id="@+id/bmiCalcTitle"
+        android:layout_width="match_parent"
+        android:gravity="center"
+        android:layout_height="50dp"
+        android:background="@color/colorPrimary"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        android:text="@string/bmi_calc_title"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
     <EditText
         android:id="@+id/weightEditText"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_columnWeight="1"
+        android:layout_marginTop="120dp"
+        android:layout_marginEnd="3dp"
         android:hint="@string/placeholder_mass"
         android:inputType="numberDecimal"
-        android:maxLength="3"/>
-
-    <TextView
-        android:id="@+id/heightLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/height"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-
-    <EditText
-        android:id="@+id/heightEditText"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_columnWeight="1"
-        android:hint="@string/placeholder_height"
-        android:inputType="numberDecimal"
-        android:maxLength="3"/>
+        android:maxLength="3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/weightLabel"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/bmiLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="36dp"
+        android:layout_marginEnd="88dp"
+        android:layout_marginBottom="16dp"
         android:text="@string/bmi"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        app:layout_constraintBottom_toTopOf="@+id/bmiCategoryLabel"
+        app:layout_constraintEnd_toStartOf="@+id/bmiTextView"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <Button
+        android:id="@+id/backButton"
+        android:layout_width="58dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginTop="84dp"
+        android:text="@string/close"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/bmiTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_columnWeight="1"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="3dp"
         android:background="#DDDDDD"
         android:gravity="center"
-        android:padding="8dp"
         android:minHeight="40dp"
+        android:padding="8dp"
+        android:textAppearance="?android:attr/textAppearanceMedium"
         android:textStyle="bold"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/bmiLabel"
+        app:layout_constraintTop_toBottomOf="@+id/heightEditText" />
 
     <TextView
-        android:id="@+id/bmiCategoryLabel"
+        android:id="@+id/weightLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/bmi_category"
-        android:textAppearance="?android:attr/textAppearanceMedium" />
-
+        android:layout_marginStart="36dp"
+        android:layout_marginTop="140dp"
+        android:layout_marginEnd="39dp"
+        android:text="@string/mass"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        app:layout_constraintEnd_toStartOf="@+id/weightEditText"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/bmiCategoryTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_columnWeight="1"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="3dp"
         android:background="#DDDDDD"
         android:gravity="center"
-        android:padding="8dp"
         android:minHeight="40dp"
-        android:textStyle="bold"
+        android:padding="8dp"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="@color/white" />
-</GridLayout>
+        android:textColor="@color/white"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/bmiCategoryLabel"
+        app:layout_constraintTop_toBottomOf="@+id/bmiTextView" />
+
+    <TextView
+        android:id="@+id/bmiCategoryLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="36dp"
+        android:layout_marginEnd="8dp"
+        android:text="@string/bmi_category"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        app:layout_constraintBaseline_toBaselineOf="@+id/bmiCategoryTextView"
+        app:layout_constraintEnd_toStartOf="@+id/bmiCategoryTextView"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <EditText
+        android:id="@+id/heightEditText"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="3dp"
+        android:hint="@string/placeholder_height"
+        android:inputType="numberDecimal"
+        android:maxLength="3"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/heightLabel"
+        app:layout_constraintTop_toBottomOf="@+id/weightEditText" />
+
+    <TextView
+        android:id="@+id/heightLabel"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="36dp"
+        android:layout_marginEnd="22dp"
+        android:text="@string/height"
+        android:textAppearance="?android:attr/textAppearanceMedium"
+        app:layout_constraintBaseline_toBaselineOf="@+id/heightEditText"
+        app:layout_constraintEnd_toStartOf="@+id/heightEditText"
+        app:layout_constraintStart_toStartOf="parent" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
