--- a/BMIcalculator/app/src/main/res/layout/activity_main.xml
+++ b/BMIcalculator/app/src/main/res/layout/activity_main.xml
@@ -30,6 +30,7 @@
         android:hint="@string/placeholder_mass"
         android:inputType="numberDecimal"
         android:maxLength="3"
+        android:importantForAutofill="no"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/weightLabel"
         app:layout_constraintTop_toTopOf="parent" />
@@ -124,6 +125,7 @@
         android:hint="@string/placeholder_height"
         android:inputType="numberDecimal"
         android:maxLength="3"
+        android:importantForAutofill="no"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/heightLabel"
         app:layout_constraintTop_toBottomOf="@+id/weightEditText" />
