--- a/BMIcalculator/app/src/main/res/layout/activity_welcome.xml
+++ b/BMIcalculator/app/src/main/res/layout/activity_welcome.xml
@@ -2,7 +2,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/black">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:background="@color/black"
+    tools:ignore="Overdraw">
+
 
     <ImageView
         android:id="@+id/welcomeImage"
