Added Shoppinglist functionallity, BMI history chart and 12 Kotlin exercises (Main.kt)

--- a/BMIcalculator/app/src/main/res/layout/activity_main.xml
+++ b/BMIcalculator/app/src/main/res/layout/activity_main.xml
@@ -142,5 +142,15 @@
         app:layout_constraintEnd_toStartOf="@+id/heightEditText"
         app:layout_constraintStart_toStartOf="parent" />
 
+    <Button
+        android:id="@+id/historyButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="160dp"
+        android:layout_marginTop="400dp"
+        android:text="@string/bmi_history"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
