--- a/BMIcalculator/app/src/main/res/layout/activity_recipe.xml
+++ b/BMIcalculator/app/src/main/res/layout/activity_recipe.xml
@@ -22,6 +22,12 @@
         android:textSize="18sp"
         android:textStyle="bold" />
 
+    <Button
+        android:id="@+id/shoppingListButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/shopping_list"/>
+
     <ListView
         android:id="@+id/recipeListView"
         android:layout_width="match_parent"
